--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,12 @@
           "strict": true
         }
       },
+      "i18n": {
+        "sourceLocale":"en-US",
+        "locales": {
+          "ro": "src/locale/messages.ro.xlf"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -34,15 +40,16 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "localize": true
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -65,6 +72,9 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "ro": {
+              "localize": ["ro"]
             }
           },
           "defaultConfiguration": "production"
@@ -77,6 +87,9 @@
             },
             "development": {
               "browserTarget": "MagicSeals:build:development"
+            },
+            "ro": {
+              "browserTarget": "MagicSeals:build:ro"
             }
           },
           "defaultConfiguration": "development"
