--- a/firebase.json
+++ b/firebase.json
@@ -15,6 +15,7 @@
       ],
       "predeploy": [
         "npm --prefix \"$RESOURCE_DIR\" run lint",
+        "npm --prefix \"$RESOURCE_DIR\" run install --force",
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
@@ -25,11 +26,7 @@
   },
   "hosting": {
     "public": "dist/MagicSeals",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
   "storage": {
     "rules": "storage.rules"
