--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,7 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-'on':
+"on":
   push:
     branches:
       - main
@@ -10,11 +10,24 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["**/environment.prod.ts"]'
+          tokenPrefix: "{"
+          tokenSuffix: "}"
+        env:
+          API_KEY: ${{secrets.API_KEY}}
+          AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
+          PROJECT_ID: ${{secrets.PROJECT_ID}}
+          STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
+          MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
+          APP_ID: ${{secrets.APP_ID}}
+          MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
       - uses: actions/checkout@v2
       - run: npm install --force && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MAGIC_SIGILS }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MAGIC_SIGILS }}"
           channelId: live
           projectId: magic-sigils
