--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+#local environment
+/src/environment/environment.ts
+
 # compiled output
 /dist
 /www
