Working on environments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 #local environment
-/src/environment/environment.ts
+src/environments/environment.ts
+**/environment.ts
 
 # compiled output
 /dist
