--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,11 +10,12 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: cschleiden/replace-tokens@v1
         with:
           files: '["**/environment.prod.ts"]'
-          tokenPrefix: "{"
-          tokenSuffix: "}"
+          tokenPrefix: "__"
+          tokenSuffix: "__"
         env:
           API_KEY: ${{secrets.API_KEY}}
           AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
@@ -23,7 +24,6 @@ jobs:
           MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
           APP_ID: ${{secrets.APP_ID}}
           MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
-      - uses: actions/checkout@v2
       - run: npm install --force && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
