--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,6 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["**/environment.prod.ts"]'
+          tokenPrefix: "__"
+          tokenSuffix: "__"
+        env:
+          API_KEY: ${{secrets.API_KEY}}
+          AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
+          PROJECT_ID: ${{secrets.PROJECT_ID}}
+          STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
+          MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
+          APP_ID: ${{secrets.APP_ID}}
+          MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
       - run: npm install --force && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
