--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: cschleiden/replace-tokens@v1
         with:
-          files: '["**/environment.prod.ts"]'
+          files: '["**/environment.*.ts"]'
           tokenPrefix: "__"
           tokenSuffix: "__"
         env:
@@ -24,6 +24,7 @@ jobs:
           MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
           APP_ID: ${{secrets.APP_ID}}
           MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
+          AUTHOR: ${{secrets.AUTHOR}}
       - run: npm install --force && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
