--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,6 +22,7 @@ jobs:
           MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
           APP_ID: ${{secrets.APP_ID}}
           MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
+          AUTHOR: ${{secrets.AUTHOR}}
       - run: npm install --force && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
