--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 #local environment
-src/environments/environment.ts
-**/environment.ts
+environment.ts
 
 # compiled output
 /dist
